primeiro video dinamico

--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
 
-    <title>Football Talks</title>
+    <title>Best moments</title>
   </head>
   <body>
     <div id="root"></div>
