--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
 
-    <title>Best moments</title>
+    <title>best moments soccer</title>
   </head>
   <body>
     <div id="root"></div>
